--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -214,8 +214,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Mars Facts\n",
-    "<!-- # Visit the Mars Facts webpage and use Pandas to scrape the table containing facts about the planet including Diameter, Mass, etc. Convert this data to a HTML table string. -->"
+    "# Mars Facts\n",
+    "# Visit the Mars Facts webpage and use Pandas to scrape the table containing facts about the planet including Diameter, Mass, etc. Convert this data to a HTML table string. -->"
    ]
   },
   {
@@ -404,11 +404,18 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Mars Heispheres\n",
-    "##### Visit the USGS Astrogeology site to obtain high resolution images for each of Mars' hemispheres. Click each of the links to the hemispheres in order to find the image url to the full resolution image. Save both the image url string for the full resolution hemisphere image, and the Hemisphere title containing the hemisphere name. Use a Python dictionary to store the data using the keys img_url and title. Append the dictionary with the image url string and the hemisphere title to a list. This list will contain one dictionary for each hemisphere."
+    "##Mars Hemispheres\n",
+    "# Visit the USGS Astrogeology site to obtain high resolution images for each of Mars' hemispheres. \n",
+    "# Click each of the links to the hemispheres in order to find the image url to the full resolution image. \n",
+    "# Save both the image url string for the full resolution hemisphere image, and the Hemisphere title \n",
+    "# containing the hemisphere name. Use a Python dictionary to store the data using the keys img_url and title. \n",
+    "# Append the dictionary with the image url string and the hemisphere title to a list. \n",
+    "# This list will contain one dictionary for each hemisphere."
    ]
   },
   {
